# SequencesClusteringTool

./: .gitmodules  CMakeLists.txt  README.md  exp0.config
data/: swissprot_10000_sequences_5000_sequences
data/plotting_scripts/: box_plots_generator.R  consensus_lines_chart_generator.R  correlation_tests.R  ggplot_boxplotter.R  line_chart_generator.R  swissprot_accuracy_line_generator.R  swissprot_all_algorithms_query_time_line_generator.R  swissprot_all_algorithms_query_time_line_generator_with_all_falconn_PI.R  swissprot_candidates_line_generator.R  swissprot_clustering_number_of_clusters_line_generator.R  swissprot_clustering_pairwise_distribution_all_algorithms_line_generator.R  swissprot_clustering_time_line_generator.R  swissprot_query_time_line_generator.R
data/raw_data/: swissprot_10000_sequences_5000_sequences_edlib_results.txt
data/raw_data/PI_TH_70/: swissprot_10000_sequences.brute-force.clusters.txt  swissprot_10000_sequences.clusters.txt  swissprot_10000_sequences_5000_sequences_falconn_results.txt  swissprot_10000_sequences_cd_hit.clstr  swissprot_10000_sequences_cd_hit_status.txt
data/raw_data/PI_TH_80/: swissprot_10000_sequences.brute-force.clusters.txt  swissprot_10000_sequences.clusters.txt  swissprot_10000_sequences_5000_sequences_falconn_results.txt  swissprot_10000_sequences_cd_hit.clstr  swissprot_10000_sequences_cd_hit_status.txt
data/raw_data/PI_TH_90/: swissprot_10000_sequences.brute-force.clusters.txt  swissprot_10000_sequences.clusters.txt  swissprot_10000_sequences_5000_sequences_falconn_results.txt  swissprot_10000_sequences_cd_hit.clstr  swissprot_10000_sequences_cd_hit_status.txt
data/tabular_data/: Transcriptome Assembly Results.xlsx  clustering results.xlsx  falconn_accuracy_swissprot_thpi_70.xlsx  falconn_accuracy_swissprot_thpi_80.xlsx  falconn_accuracy_swissprot_thpi_90.xlsx  swissprot  10000 sequences clustering msa results thpi 70.xlsx  swissprot  10000 sequences clustering msa results thpi 80.xlsx  swissprot  10000 sequences clustering msa results thpi 90.xlsx  swissprot 10000 sequences clustering all algorithms manual analysis thpi 70.xlsx  swissprot 10000 sequences clustering all algorithms manual analysis thpi 80.xlsx  swissprot 10000 sequences clustering all algorithms manual analysis thpi 90.xlsx  swissprot clustering all algorithms manual analysis thpi 70.xlsx  swissprot clustering all algorithms manual analysis thpi 80.xlsx  swissprot clustering all algorithms manual analysis thpi 90.xlsx  swissprot clustering msa results thpi 70.xlsx  swissprot clustering msa results thpi 80.xlsx  swissprot clustering msa results thpi 90.xlsx
include/core/: cluster.h  falconn.h  fasta.hpp  parameters_tuner.h  sequences_vectors.h  similar_fasta_sequences.h  util.h
lib/: CMakeLists.txt
src/: main.cpp
